--- a/public/de/de-tags/index.html
+++ b/public/de/de-tags/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://lukerambling.com/de/de-tags/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d65e79ddcc879a437d71cb9468f6806306f3df16be1b8c00a56c2e955dee57e7.css" integrity="sha256-1l553cyHmkN9ccuUaPaAYwbz3xa&#43;G4wApWwulV3uV&#43;c=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.55bddaea6a4f33c6022f464c386c32199330334648d0e6436c2489ab5a10ccb8.css" integrity="sha256-Vb3a6mpPM8YCL0ZMOGwyGZMwM0ZI0OZDbCSJq1oQzLg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://lukerambling.com/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://lukerambling.com/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://lukerambling.com/favicon-32x32.png">
