--- a/public/search/index.html
+++ b/public/search/index.html
@@ -10,8 +10,8 @@
 <meta name="description" content="Site search">
 <meta name="author" content="">
 <link rel="canonical" href="https://lukerambling.com/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d65e79ddcc879a437d71cb9468f6806306f3df16be1b8c00a56c2e955dee57e7.css" integrity="sha256-1l553cyHmkN9ccuUaPaAYwbz3xa&#43;G4wApWwulV3uV&#43;c=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/assets/js/search.073e70550372f593926c8b8a28fdd8a5d032526fcdc6eb9ae69a792954cb4c2c.js" integrity="sha256-Bz5wVQNy9ZOSbIuKKP3YpdAyUm/Nxuua5pp5KVTLTCw="></script>
+<link crossorigin="anonymous" href="/assets/css/stylesheet.55bddaea6a4f33c6022f464c386c32199330334648d0e6436c2489ab5a10ccb8.css" integrity="sha256-Vb3a6mpPM8YCL0ZMOGwyGZMwM0ZI0OZDbCSJq1oQzLg=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/assets/js/search.238a7984b620c791ff5e8fe313b196c3d666c7b7556417480a03b36d9e0a4820.js" integrity="sha256-I4p5hLYgx5H/Xo/jE7GWw9Zmx7dVZBdICgOzbZ4KSCA="></script>
 <link rel="icon" href="https://lukerambling.com/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://lukerambling.com/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://lukerambling.com/favicon-32x32.png">
