--- a/public/de/index.html
+++ b/public/de/index.html
@@ -10,19 +10,19 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://lukerambling.com/de/">
+<link rel="canonical" href="https://lukerambling.de/de/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.55bddaea6a4f33c6022f464c386c32199330334648d0e6436c2489ab5a10ccb8.css" integrity="sha256-Vb3a6mpPM8YCL0ZMOGwyGZMwM0ZI0OZDbCSJq1oQzLg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://lukerambling.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://lukerambling.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://lukerambling.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://lukerambling.com/apple-touch-icon.png">
-<link rel="mask-icon" href="https://lukerambling.com/safari-pinned-tab.svg">
+<link rel="icon" href="https://lukerambling.de/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://lukerambling.de/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://lukerambling.de/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://lukerambling.de/apple-touch-icon.png">
+<link rel="mask-icon" href="https://lukerambling.de/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://lukerambling.com/de/index.xml">
-<link rel="alternate" type="application/json" href="https://lukerambling.com/de/index.json">
-<link rel="alternate" hreflang="en" href="https://lukerambling.com/">
-<link rel="alternate" hreflang="de" href="https://lukerambling.com/de/">
+<link rel="alternate" type="application/rss+xml" href="https://lukerambling.de/de/index.xml">
+<link rel="alternate" type="application/json" href="https://lukerambling.de/de/index.json">
+<link rel="alternate" hreflang="en" href="https://lukerambling.de/">
+<link rel="alternate" hreflang="de" href="https://lukerambling.de/de/">
 <noscript>
     <style>
         #theme-toggle,
@@ -62,7 +62,7 @@
 </noscript><meta property="og:title" content="Luke Rambling" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://lukerambling.com/de/" />
+<meta property="og:url" content="https://lukerambling.de/de/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Luke Rambling"/>
@@ -73,9 +73,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Luke Rambling",
-  "url": "https://lukerambling.com/",
+  "url": "https://lukerambling.de/",
   "description": "",
-  "thumbnailUrl": "https://lukerambling.com/favicon.ico",
+  "thumbnailUrl": "https://lukerambling.de/favicon.ico",
   "sameAs": [
       "https://github.com/lguenth", "https://twitter.com/powerverwirrt", "mailto:mail@lukerambling.de"
   ]
@@ -98,7 +98,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://lukerambling.com/de/" accesskey="h" title="Luke Rambling (Alt + H)">Luke Rambling</a>
+            <a href="https://lukerambling.de/de/" accesskey="h" title="Luke Rambling (Alt + H)">Luke Rambling</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -122,7 +122,7 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://lukerambling.com/" title="Englisch"
+                        <a href="https://lukerambling.de/" title="Englisch"
                             aria-label="EN">EN</a>
                     </li>
                 </ul>
@@ -130,22 +130,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://lukerambling.com/de/about/" title="Über mich">
+                <a href="https://lukerambling.de/de/about/" title="Über mich">
                     <span>Über mich</span>
                 </a>
             </li>
             <li>
-                <a href="https://lukerambling.com/de/archives/" title="Archiv">
+                <a href="https://lukerambling.de/de/archives/" title="Archiv">
                     <span>Archiv</span>
                 </a>
             </li>
             <li>
-                <a href="https://lukerambling.com/de/tags/" title="Tags">
+                <a href="https://lukerambling.de/de/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://lukerambling.com/de/search/" title="Suche">
+                <a href="https://lukerambling.de/de/search/" title="Suche">
                     <span>Suche</span>
                 </a>
             </li>
@@ -192,7 +192,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://lukerambling.com/de/">Luke Rambling</a></span>
+    <span>&copy; 2022 <a href="https://lukerambling.de/de/">Luke Rambling</a></span>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
