Revert last commit because I'm tired
This reverts commit b8b703a5c2f59ebbac5ffcf937f44f43cecb9294.

--- a/public/de/index.html
+++ b/public/de/index.html
@@ -145,7 +145,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://lukerambling.de/de/search/" title="Suche (Alt &#43; /)" accesskey=/>
+                <a href="https://lukerambling.de/de/search/" title="Suche">
                     <span>Suche</span>
                 </a>
             </li>
