--- a/public/de/de-tags/index.html
+++ b/public/de/de-tags/index.html
@@ -129,7 +129,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://lukerambling.de/de/search/" title="Suche (Alt &#43; /)" accesskey=/>
+                <a href="https://lukerambling.de/de/search/" title="Suche">
                     <span>Suche</span>
                 </a>
             </li>
