--- a/public/gardens/index.html
+++ b/public/gardens/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>https://lukerambling.de/posts/gardens/</title>
-    <link rel="canonical" href="https://lukerambling.de/posts/gardens/">
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://lukerambling.de/posts/gardens/">
-  </head>
-</html>
+<!doctype html><html lang=en><head><title>https://lukerambling.de/posts/gardens/</title><link rel=canonical href=https://lukerambling.de/posts/gardens/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://lukerambling.de/posts/gardens/"></head></html>
